# chip8-emulator

./: CMakeLists.txt  Chip8.cpp  Chip8.h  README.md  Timer.cpp  Timer.h  main.cpp
cmake/: FindSDL2.cmake
games/: games.txt
